Fixed footer overlapping content
Because footer was positioned absolutely in regards to page, it overlapped
longer sidebars, as well as content on two column layouts

- placed footer within content so it's positioned absolute in relation to it
- removed sidebar's absolute positioning so it stays in the flow and adds to
content height
- adjusted the css accordingly

--- a/_sass/layout/_closing.scss
+++ b/_sass/layout/_closing.scss
@@ -4,9 +4,10 @@
   padding-bottom: 1em;
 
   @include media($large-screen) {
-    @include span-columns(3);
+    @include span-columns(4);
     position: absolute;
     bottom: 2em;
+    padding-left: 2.35765%;
     right: 0;
     z-index: 3;
   }
