--- a/_sass/layout/_global.scss
+++ b/_sass/layout/_global.scss
@@ -31,7 +31,6 @@ body {
     line-height: 18px;
     position: absolute;
     text-align: center;
-    text-indent: -.1em;
     top: .8em;
     width: 18px;
   }
