--- a/_sass/pages/_database_all.scss
+++ b/_sass/pages/_database_all.scss
@@ -102,6 +102,12 @@
     padding: 0;
     margin: 0;
   }
+
+  &:last-child {
+    .half-row:nth-of-type(2) {
+     margin-bottom: 7em;
+    }
+  }
 }
 
 .all-section.is-hidden {
